# movement

./: .all-contributorsrc  .buildinfo  .cruft.json  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  CITATION.CFF  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Jupyter_gui_Test.ipynb  LICENSE  MANIFEST.in  README.md  Untitled.ipynb  api_index.html  blog.html  conftest.py  contributing.html  coverage.xml  foobar.py  format_docs.py  genindex.html  getting_started.html  index.html  matlab_integration.m  notebook_combined_ds.py  notebook_napari_save.py  objects.inv  output.json  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  sg_execution_times.html  sitemap.xml  test_individual_0.h5  test_poses_to_bboxes_manual.py  (+4 more)
.binder/: postBuild  requirements.txt
.doctrees/: api_index.doctree  contributing.doctree  environment.pickle  getting_started.doctree  index.doctree  sg_execution_times.doctree
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
_modules/: index.html
_sources/: api_index.rst.txt  contributing.rst.txt  getting_started.md.txt  index.md.txt  sg_execution_times.rst.txt
_static/: documentation_options.js
api/: movement.analysis.kinematics.compute_acceleration.html  movement.analysis.kinematics.compute_displacement.html  movement.analysis.kinematics.compute_velocity.html  movement.analysis.kinematics.html  movement.datasets.fetch_pose_data_path.html  movement.datasets.list_pose_data.html  movement.filtering.filter_by_confidence.html  movement.filtering.html  movement.filtering.interpolate_over_time.html  movement.filtering.median_filter.html  movement.filtering.report_nan_values.html  movement.filtering.rolling_filter.html  movement.filtering.savgol_filter.html  movement.io.load_bboxes.from_file.html  movement.io.load_bboxes.from_numpy.html  movement.io.load_bboxes.from_via_tracks_file.html  movement.io.load_bboxes.html  movement.io.load_poses.from_anipose_file.html  movement.io.load_poses.from_anipose_style_df.html  movement.io.load_poses.from_dlc_df.html  movement.io.load_poses.from_dlc_file.html  movement.io.load_poses.from_dlc_style_df.html  movement.io.load_poses.from_file.html  movement.io.load_poses.from_lp_file.html  movement.io.load_poses.from_multiview_files.html  movement.io.load_poses.from_numpy.html  movement.io.load_poses.from_nwb_file.html  movement.io.load_poses.from_sleap_file.html  movement.io.load_poses.html  movement.io.nwb.NWBFileSaveConfig.html  movement.io.nwb.html  movement.io.save_bboxes.html  movement.io.save_bboxes.to_via_tracks_file.html  movement.io.save_poses.html  movement.io.save_poses.to_dlc_df.html  movement.io.save_poses.to_dlc_file.html  movement.io.save_poses.to_dlc_style_df.html  movement.io.save_poses.to_lp_file.html  movement.io.save_poses.to_nwb_file.html  movement.io.save_poses.to_sleap_analysis_file.html  (+109 more)
auto_api/: movement.datasets.fetch_pose_data_path.html  movement.datasets.find_pose_data.html  movement.datasets.list_pose_data.html  movement.io.load_poses.from_dlc_df.html  movement.io.load_poses.from_dlc_file.html  movement.io.load_poses.from_sleap_file.html  movement.io.save_poses.to_dlc_df.html  movement.io.save_poses.to_dlc_file.html  movement.io.validators.ValidFile.html  movement.io.validators.ValidHDF5.html  movement.io.validators.ValidPoseTracks.html  movement.io.validators.ValidPosesCSV.html  movement.logging.configure_logging.html  movement.logging.log_and_raise_error.html  movement.logging.log_error.html  movement.logging.log_warning.html
auto_examples/: index.html  load_and_explore_poses.html  sg_execution_times.html
binder/: environment.yml
blog/: 2024.html  2025.html  arc-collaboration.html  archive.html  author.html  category.html  drafts.html  index.html  language.html  location.html  movement-v0_0_21.html
calibration/: README.md  calibration_utils.py  check_sample_data.ipynb
community/: contributing.html  index.html  license.html  mission-scope.html  people.html  related-projects.html  roadmap.html  roadmaps.html
data/: DLC_sample_metadata.pickle  DLC_sample_tracks.csv  DLC_sample_tracks.h5
design/: issue-977-uniquebodyparts.md
dev/: 404.html  api_index.html  blog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  sitemap.xml
docs/: CONTRIBUTING.md  Makefile  check_self_references.py  convert_admonitions.py  make.bat  make_api.py  make_api_index.py  requirements.txt  translate.py  updateconvert_admonitions.py
examples/: EPM_ROIs.csv  Event_labelling.py  Forward_vs_Linear_Interpolation_eachframe.ipynb  GALLERY_HEADER.rst  Linear_Interpolation.py  README.rst  Untitled.ipynb  aggregate_sources.ipynb  align_videos.py  annotate_boris_events.py  boundary_angles.html  boundary_angles.py  broadcasting_your_own_methods.html  broadcasting_your_own_methods.py  c3d_markers.py  calculate_thigmotaxis.ipynb  code_for_interp.ipynb  compute_head_direction.html  compute_head_direction.py  compute_kinematics.html  compute_kinematics.py  compute_pairwise_distances.py  compute_polar_coordinates.html  compute_polar_coordinates.py  compute_polarization_AP_inference.py  compute_polarization_viz.py  compute_straightness_index.py  compute_turning_angles.py  convert_file_formats.html  convert_file_formats.py  csv_napari.py  epm_rois.yaml  event_annotations.py  example_thigmotaxis.py  filter_and_interpolate.html  filter_and_interpolate.py  forward_filling_interpolation.py  fuse_multiple_tracks.py  index.html  intracellular_particles.py  (+43 more)
getting_started/: index.html  input_output.html  installation.html  movement_dataset.html  sample_data.html
movement/: __init__.py  cli_entrypoint.py  datasets.py  filtering.py  kalmanFilter.py  kalman_filter.py  kalmenfilter.py  kinematics.py  log_config.py  logging.py  metrics.py  move_accessor.py  movement_dataset.py  plot.py  public_data.py  sample_data.py  sample_datasets.py  test_kalmenfilter.py  track_fusion.py  trajectory_complexity.py  transforms.py  (+4 more)
movement-env/: pyvenv.cfg
movement.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+2708 files in other folders)
